--- a/app/user-management/login.component.html
+++ b/app/user-management/login.component.html
@@ -1,5 +1,16 @@
-<h2>Login view...</h2>
-
-<input type="email" placeholder="UserName">
-<input type="password" placeholder="Password">
-<button>Login</button> 
+<div class="container">
+    <form class="form-signin">
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password">
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" value="remember-me"> Remember me
+            </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Forgot Password</button>
+    </form>
+</div>
